force-app/main/default/objects/Failure_Activity__c/Failure_Activity__c.object-meta.xml
<CustomObject><label>Failure Activity</label><pluralLabel>Failure Activities</pluralLabel><nameField><label>Activity Number</label><type>AutoNumber</type><displayFormat>FA-{00000}</displayFormat></nameField><deploymentStatus>Deployed</deploymentStatus><sharingModel>Private</sharingModel></CustomObject>