force-app/main/default/objects/Failure_Activity__c/fields/Activity_Type__c.field-meta.xml
<CustomField><fullName>Activity_Type__c</fullName><label>Activity Type</label><length>40</length><type>Text</type></CustomField>