force-app/main/default/objects/Failure_Activity__c/fields/From_Status__c.field-meta.xml
<CustomField><fullName>From_Status__c</fullName><label>From Status</label><length>40</length><type>Text</type></CustomField>