force-app/main/default/objects/Failure_Activity__c/fields/Notes__c.field-meta.xml
<CustomField><fullName>Notes__c</fullName><label>Notes</label><length>4000</length><type>LongTextArea</type><visibleLines>6</visibleLines></CustomField>