force-app/main/default/objects/Failure_Activity__c/fields/To_Status__c.field-meta.xml
<CustomField><fullName>To_Status__c</fullName><label>To Status</label><length>40</length><type>Text</type></CustomField>